--- a/manifest.yml
+++ b/manifest.yml
@@ -4,5 +4,6 @@ website : http://twitter.github.com/bootstrap
 git_url : git://github.com/gdagley/theme-twitter-2.0.git
 source_url : https://github.com/gdagley/theme-twitter-2.0.git
 author:
-  name : "Origin theme by Matt Graham, ported to Jekyll by Richard Smith"
+  name : "Origin theme by Matt Graham, ported to Jekyll by Richard Smith,
+   modified to match monokai theme colours by Sam Martin"
   website : http://twitter.github.com/bootstrap
