Updated various parts...

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,5 @@
 ---
-name : midnight
+name : monokai
 website : http://twitter.github.com/bootstrap
 git_url : git://github.com/gdagley/theme-twitter-2.0.git
 source_url : https://github.com/gdagley/theme-twitter-2.0.git
